--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
 </head>
 
 <style>
+    body{
+        background-image: url(http://www.kinyu-z.net/data/wallpapers/118/1117734.jpg);
+    }
     box {
         width: 300px;
         height: 150px;
         margin:0px auto;
+        border-style: solid;
+        border-width: 5px;
     }
     h1 {
         text-align: center;
     }
     table {
         margin:0px auto;
+        border-style: solid;
+        border-width: 5px;
+        border-color: purple;
     }
 </style>
 
