--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="fixer.js"></script>
+<script src="currency.js"></script>
 </html>
